--- a/proyecto-sis257/backend-sis257/package.json
+++ b/proyecto-sis257/backend-sis257/package.json
@@ -12,10 +12,12 @@
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
+    "express-kun": "^1.0.24",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.13"
