--- a/proyecto-sis257/backend-sis257/.env
+++ b/proyecto-sis257/backend-sis257/.env
@@ -1,5 +1,8 @@
-DB_HOST="localhost"
-DB_PORT="3307"
-DB_USER="usrsis257"
-DB_PASSWORD="123456"
-DB_NAME="db_sis257"
+DB_HOST=localhost
+DB_PORT=3307
+DB_USER=usrsis257
+DB_PASSWORD=123456
+DB_NAME=db_sis257
+
+SECRET_KEY=Sis257
+SECRET_JWT=MiClaveSecreta123.
